--- a/src/Header.css
+++ b/src/Header.css
@@ -1,7 +1,4 @@
-/*CREATE main.css IN THE FOLDER assets/css AND INSERT BELOW LINES*/
-/***************************
-    CUSTOM SCROLL BAR
-****************************/
+
 *,
 html {
     scroll-behavior: smooth;
@@ -16,13 +13,13 @@ html {
 }
 
 :root {
-    --white: #FFF;
-    --black: #000;
-    --dark: #1b1b1b;
+    --white: #FFF !important;
+    --black: #000 !important;
+    --dark: #1b1b1b !important;
     --gray: rgba(1, 1, 1, 0.6);
     --lite: rgba(255, 255, 255, 0.6);
-    --primary: #fcb449;
-    --primary_dark: #a15703;
+    --primary: #fcb449 !important;
+    --primary_dark: #a15703 !important;
     --default_font: 'Montserrat', sans-serif;
     --title_font: 'Abril Fatface', cursive;
     --cursive_font: 'Dancing Script', cursive;
@@ -463,7 +460,7 @@ menu ul li .fa {
     transition: 0.5s;
     opacity: 0;
     z-index: -1;
-    background-color: var(--gray);
+    background-color:#00000000;
 }
 
 .social_icons,
