--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,3 @@
-
 *,
 html {
     scroll-behavior: smooth;
@@ -293,17 +292,17 @@ nav .ham {
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    border: 2px solid var(--dark);
+    border: 2px solid white;
     width: 50px;
     height: 50px;
-    color: var(--dark);
+    color: white;
     float: right;
     margin-right: 0;
 }
 
 nav .ham:hover {
-    border: 2px solid var(--dark);
-    color: var(--dark);
+    border: 2px solid white;
+    color: white;
 }
 
 @media (max-width:920px) {
@@ -355,9 +354,13 @@ menu h4 {
     line-height: 1.6em;
 }
 
+.white-icon {
+    color: white;
+}
+
 .close {
     float: right;
-    border: 2px solid var(--lite);
+    border: 2px solid white;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -365,7 +368,7 @@ menu h4 {
     width: 30px;
     height: 32px;
     padding: 0.5rem;
-    color: var(--lite);
+    color: white;
     position: absolute;
     top: 5%;
     right: 5%;
@@ -379,6 +382,20 @@ menu h4 {
 menu ul {
     margin: 0;
     padding: 0;
+}
+
+.btn-primary {
+    background-color: rgba(0, 0, 255, 0) !important;
+    color: white !important;
+    /* Add more custom styles as needed */
+}
+
+.show>.btn-primary.dropdown-toggle:focus {
+    border-color: #f9f9f9;
+}
+
+.btn-primary a {
+    color: #f9f9f9 !important;
 }
 
 menu li {
@@ -418,20 +435,49 @@ menu ul li .fa {
     color: var(--white);
 }
 
-.dropdown {
-    position: relative;
-}
+.dropdown {}
 
 .dropdown aside {
     position: relative;
     width: 100%;
     left: 1rem;
     display: none;
+    color: #f9f9f9;
+}
+
+.DropdownButton {
+    position: relative;
+    width: 100%;
+    left: 1rem;
+    display: none;
+    color: #f9f9f9;
 }
 
 .dropdown aside a {
     display: block;
     padding: 0.3rem 0;
+}
+
+.link {
+    color: #000;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.aside {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.sub-link {
+    color: #000;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
 @media (max-width:920px) {
@@ -460,7 +506,7 @@ menu ul li .fa {
     transition: 0.5s;
     opacity: 0;
     z-index: -1;
-    background-color:#00000000;
+    background-color: #00000000;
 }
 
 .social_icons,
